# daedalus-vm

./: Cargo.toml  README.md
src/: file.rs  lib.rs
src/file/: mod.rs  symbol.rs
src/game-state/: mod.rs
src/game_state/: game_externals.rs  mod.rs  object_allocator.rs
src/stdlib/: item.rs  menu.rs  mod.rs  npc.rs  particle.rs  player.rs  prelude.rs  shared.rs  sound.rs
src/stdlib/instances/: focus.rs  info.rs  item.rs  item_react.rs  menu.rs  menu_item.rs  mission.rs  mod.rs  music_theme.rs  npc.rs  particle_effect.rs  sound_effect.rs  spell.rs
src/vm/: call_stack_frame.rs  external_funcs.rs  mod.rs
src/vm/file/: file.rs  mod.rs  stack.rs  sym_table.rs  symbol.rs
