[package]
name = "daedalus"
version = "0.1.0"
authors = ["MordragT <scrat_games@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitfield = "0.13.2"
enumflags2 = "0.6.4"
zen-parser = { git = "https://github.com/MordragT/zen-parser", branch = "master" }
zen-memory = { git = "https://github.com/MordragT/zen-memory", branch = "master" }
